--- a/FrontEnd/MERN_E_COMM/package.json
+++ b/FrontEnd/MERN_E_COMM/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "install": "^0.13.0",
+    "json-server": "^1.0.0-beta.3",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
