--- a/FrontEnd/MERN_E_COMM/package.json
+++ b/FrontEnd/MERN_E_COMM/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "install": "^0.13.0",
     "json-server": "^1.0.0-beta.3",
     "npm": "^10.9.0",
