Forgot Password - Email Int Setup - 1

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,5 @@ PORT = 8080
 MONGODB_URL = mongodb+srv://nikhiltiwari0707:Nikhil%400200%40@mernecommcluster.fndxo.mongodb.net/?retryWrites=true&w=majority&appName=mernECommCluster;
 JWT_SCERETKEY_1 = "Nikhil0200"
 JWT_SCERETKEY_2 = "Karan0200"
+MAIL_PASSWORD = "kdiy jfzg wfdo mmck"
+
