--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9"
   },
   "scripts": {
