--- a/FrontEnd/MERN_E_COMM/package.json
+++ b/FrontEnd/MERN_E_COMM/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
