--- a/FrontEnd/MERN_E_COMM/package.json
+++ b/FrontEnd/MERN_E_COMM/package.json
@@ -22,6 +22,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0"
   },
